--- a/Trunk/EVEbot/changelog.html
+++ b/Trunk/EVEbot/changelog.html
@@ -10,6 +10,7 @@
     <h1>EVEBot Changelog</h1>
     <ul class="changelog_entries">
       <li class="changelog_entry"><span class="changelog_date">2008-06-21</span> <span class="changelog_author">cybertech</span></li>
+      <li class="changelog_change"><span class="changelog_revision"><a id="r624" href="#r624">[r624]</a></span> <span class="changelog_files">changelog.html</span> <span class="changelog_message"/></li>
       <li class="changelog_change"><span class="changelog_revision"><a id="r623" href="#r623">[r623]</a></span> <span class="changelog_files">core/obj_Ship.iss</span> <span class="changelog_message">Shield hardener activation for non-ratting botmodes.</span></li>
       <li class="changelog_change"><span class="changelog_revision"><a id="r622" href="#r622">[r622]</a></span> <span class="changelog_files">Behaviors/obj_Ratter.iss, core/obj_Combat.iss, core/obj_Skills.iss</span> <span class="changelog_message">Ratter will undock if needed.<br/>Optimize obj_skills a tad<br/>Note: Ratter will probably try to target things near the station after undocking. :)</span></li>
       <li class="changelog_entry"><span class="changelog_date">2008-06-20</span> <span class="changelog_author">cybertech</span></li>
